# kanjilearner

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  ui.xopp
src/: CSVInteraction.cpp  CSVInteraction.h  main.cpp  mainwindow.cpp  mainwindow.h  tablet.pro  tabletapplication.cpp  tabletapplication.h  tabletcanvas.cpp  tabletcanvas.h
